--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "ar.js": "^2.2.2",
     "browser-router": "^0.2.0",
     "react": "^18.3.1",
+    "react-aframe-ar": "^1.18.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
+    "react-web-ar": "^1.0.0-beta0",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
