--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0",
     "aframe": "^1.6.0",
+    "aframe-ar": "^0.2.1-a",
     "ar.js": "^2.2.2",
     "browser-router": "^0.2.0",
     "react": "^18.3.1",
